RESOLVED FIXED178586
ASSERTION FAILED: !m_serviceWorkerManager in WebProcess::getWorkerContextConnection() on API tests
https://bugs.webkit.org/show_bug.cgi?id=178586
Summary ASSERTION FAILED: !m_serviceWorkerManager in WebProcess::getWorkerContextConn...
youenn fablet
Reported 2017-10-20 08:04:28 PDT
Log is: ASSERTION FAILED: !m_serviceWorkerManager /Volumes/Data/slave/highsierra-debug/build/Source/WebKit/WebProcess/WebProcess.cpp(1636) : void WebKit::WebProcess::getWorkerContextConnection() 1 0x5c6cd745d WTFCrash 2 0x107b45590 WebKit::WebProcess::getWorkerContextConnection() 3 0x107b8e0ae void IPC::callMemberFunctionImpl<WebKit::WebProcess, void (WebKit::WebProcess::*)(), std::__1::tuple<> >(WebKit::WebProcess*, void (WebKit::WebProcess::*)(), std::__1::tuple<>&&, std::__1::integer_sequence<unsigned long>) 4 0x107b8e020 void IPC::callMemberFunction<WebKit::WebProcess, void (WebKit::WebProcess::*)(), std::__1::tuple<>, std::__1::integer_sequence<unsigned long> >(std::__1::tuple<>&&, WebKit::WebProcess*, void (WebKit::WebProcess::*)()) 5 0x107b8c86d void IPC::handleMessage<Messages::WebProcess::GetWorkerContextConnection, WebKit::WebProcess, void (WebKit::WebProcess::*)()>(IPC::Decoder&, WebKit::WebProcess*, void (WebKit::WebProcess::*)()) 6 0x107b88334 WebKit::WebProcess::didReceiveWebProcessMessage(IPC::Connection&, IPC::Decoder&) 7 0x107b3b1cb WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 8 0x10706d643 IPC::Connection::dispatchMessage(IPC::Decoder&) 9 0x107062c28 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 10 0x10706dc4a IPC::Connection::dispatchOneMessage() 11 0x107085f2d IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 12 0x107085e89 WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 13 0x5c6d0cdeb WTF::Function<void ()>::operator()() const 14 0x5c6d2d423 WTF::RunLoop::performWork() 15 0x5c6d2dca4 WTF::RunLoop::performWork(void*) 16 0x7fff414d4941 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 17 0x7fff4158c33c __CFRunLoopDoSource0 18 0x7fff414b7930 __CFRunLoopDoSources0 19 0x7fff414b6dad __CFRunLoopRun 20 0x7fff414b6607 CFRunLoopRunSpecific 21 0x7fff407cb866 RunCurrentEventLoopInMode 22 0x7fff407cb5d6 ReceiveNextEventCommon 23 0x7fff407cb354 _BlockUntilNextEventMatchingListInModeWithFilter 24 0x7fff3eac944f _DPSNextEvent 25 0x7fff3f25e508 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 26 0x7fff3eabe25d -[NSApplication run] 27 0x7fff3ea8d3fe NSApplicationMain 28 0x7fff68d8af33 _xpc_objc_main 29 0x7fff68d89b86 xpc_main 30 0x106f2012b main
Attachments
Patch (2.13 KB, patch)
2017-10-23 11:16 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-10-20 08:05:21 PDT
Looking at WebProcessPool::getWorkerContextProcessConnection, we can send several times Messages::WebProcess::GetWorkerContextConnection, which does not seem expected in WebProcess::getWorkerContextConnection if the connection is already made.
Radar WebKit Bug Importer
Comment 2 2017-10-22 13:37:19 PDT
youenn fablet
Comment 3 2017-10-23 11:16:39 PDT
WebKit Commit Bot
Comment 4 2017-10-24 09:33:19 PDT
Comment on attachment 324570 [details] Patch Clearing flags on attachment: 324570 Committed r223890: <https://trac.webkit.org/changeset/223890>
WebKit Commit Bot
Comment 5 2017-10-24 09:33:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.