ASSERTION FAILED: !m_serviceWorkerManager in WebProcess::getWorkerContextConnection() on API tests https://bugs.webkit.org/show_bug.cgi?id=178586 <rdar://problem/35115902>

Patch by Youenn Fablet <youenn@apple.com> on 2017-10-24
Reviewed by Brady Eidson.

       Covered by API tests no longer crashing.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::getWorkerContextProcessConnection): Sending a worker context process connection message only at creation of the service worker process.

Canonical link: https://commits.webkit.org/194886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223890 268f45cc-cd09-0410-ab3c-d52691b4dbfc